fix: add gap between toggle and label

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -160,6 +160,7 @@
   border-radius: 12px;
   padding: 0.5rem 0.75rem;
   width: 100%;
+  gap:.8em;
 }
 
 .toggle-container p {
